tests/baselines/reference/genericConstraintOnExtendedBuiltinTypes.errors.txt
tests/cases/compiler/genericConstraintOnExtendedBuiltinTypes.ts(23,13): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Tween<T>'.


==== tests/cases/compiler/genericConstraintOnExtendedBuiltinTypes.ts (1 errors) ====
    declare module EndGate {
        export interface ICloneable {
            Clone(): any;
        }
    }
    
    interface Number extends EndGate.ICloneable { }
    
    module EndGate.Tweening {
        export class Tween<T extends ICloneable>{
            private _from: T;
    
    
            constructor(from: T) {
                this._from = from.Clone();
            }
        }
    }
    
    module EndGate.Tweening {
        export class NumberTween extends Tween<number>{
            constructor(from: number) {
                super(from);
                ~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Tween<T>'.
            }
        }
    }